--- a/dr_info.html
+++ b/dr_info.html
@@ -7,8 +7,8 @@
     Case Problem 2
     
     Diane's Run Race Information
-    Author: 
-    Date:   
+    Author: Jonathan Barrett   
+    Date:  2023-01-23 
 
     Filename: dr_info.html
    -->
