--- a/dr_info.html
+++ b/dr_info.html
@@ -15,11 +15,25 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Diane's Run Race Info</title>
+   <link rel="Stylesheet" href="dr_base.css">
+   <link rel="Stylesheet" href="dr_layout2.css">
 
 </head>
 
 <body>
+    <header>
+        <ul>
+            <li><a href="dr_index.html">Home</a></li>
+            <li><a href="dr_info.html">Race Info</a></li>
+            <li><a href="dr_faq.html">FAQ</a></li>
+        </ul>
+    </header>
 
+<section>
+    <header>Page last Updated: Tuesday, August 31, 2021</header>
+</section>
+
+    <footer>Diane's Run &#9829 45 Mountain Drive &#9829 Cheyenne, WY 82001</footer>
 </body>
 
 </html>
