--- a/dr_index.html
+++ b/dr_index.html
@@ -62,7 +62,6 @@
     </ul>
     </section>
     <section>
-        <p>
             <img src="dr_photo1.png" alt="Diane's Run">
 
                 <h1>Diane's Run - September 12, 2021</h1>
@@ -80,12 +79,12 @@
 
             <p>
                 You can guarantee a spot by filling out the entry form and mailing it to
-                dianesrun@example.com. 
+                <a href="mailto:dianesrun@example.com?Subject=Entry%20Form">dianesrun@example.com</a>. 
                 The $35 entry fee is tax deductible and goes directly to
                 important research and women in need. We keep our overhead very low so every dollar
                 counts. More than 75% of the net proceeds fund screening and treatment 
                 programs in your communities. We welcome out-of-town visitors. We will
-                help you find accommodations during your visit.
+                help you find <a href="dr_faq.html#faq13">accommodations</a> during your visit.
             </p>
 
 
@@ -112,9 +111,8 @@
                 We hope you can join us this year and become part of the Diane's Run family.
             </p>
 
-        </p>
     </section>
-    <footer>Diane's Run &#9829 45 Mountain Drive &#9829 Cheyenne, WY 82001 </footer>
+    <footer>Diane's Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001 </footer>
 </body>
 
 </html>
