--- a/dr_info.html
+++ b/dr_info.html
@@ -13,7 +13,7 @@
     Filename: dr_info.html
    -->
    <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="viewport" content="width=device-width, initial-scale=1"/>
    <title>Diane's Run Race Info</title>
    <link rel="Stylesheet" href="dr_base.css">
    <link rel="Stylesheet" href="dr_layout2.css">
@@ -73,8 +73,7 @@
     </ul>
 
 </section>
-
-    <footer>Diane's Run &#9829 45 Mountain Drive &#9829 Cheyenne, WY 82001</footer>
+    <footer>Diane's Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001</footer>
 </body>
 
 </html>
