--- a/dr_index.html
+++ b/dr_index.html
@@ -7,7 +7,7 @@
     Case Problem 2
     
     Diane's Run Home Page
-    Author: Joathan Barrett
+    Author: Jonathan Barrett
     Date:  2023-01-23
 
     Filename: dr_index.html
@@ -30,36 +30,37 @@
         </nav>
     </header>
     <section>
-        <h1>Your Support Does</h1>
+            <h1>Your Support Does</h1>
 
-    <p>Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction 
-    is fear and confusion. Support is just a phone call or mouse click away. Our 
-    free services offer a friendly ear and expert guidance to anyone dealing with 
-    this life-threatening illness.</p>
+        <p>Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction 
+        is fear and confusion. Support is just a phone call or mouse click away. Our 
+        free services offer a friendly ear and expert guidance to anyone dealing with 
+        this life-threatening illness.</p>
 
-    <p>By running or walking with us, you can ensure 
-    that we are there when people need us. Here is how your contribution can 
-    help:</p>
+        <p>By running or walking with us, you can ensure 
+        that we are there when people need us. Here is how your contribution can 
+        help:
+        </p>
 
-    <ul>
-        <li>
-            <strong>$15</strong> pays for a headscarf set, boosting the confidence of 
-            women who have lost hair from her breast cancer treatment.
-        </li>
-        <li>
-            <strong>$50</strong> trains a member of our support network for a 
-            year to help improve the care of women with breast cancer.
-        </li>
-        <li>
-            <strong>$125</strong> covers the cost of counseling sessions to help 
-            women cope with the distress of their cancer treatment.
-        </li>
-        <li>
-            <strong>$250</strong> funds a hospital information station 
-            for a year so that people affected by breast cancer have easy 
-            access to the latest resources and help.
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <strong>$15</strong> pays for a headscarf set, boosting the confidence of 
+                women who have lost hair from her breast cancer treatment.
+            </li>
+            <li>
+                <strong>$50</strong> trains a member of our support network for a 
+                year to help improve the care of women with breast cancer.
+            </li>
+            <li>
+                <strong>$125</strong> covers the cost of counseling sessions to help 
+                women cope with the distress of their cancer treatment.
+            </li>
+            <li>
+                <strong>$250</strong> funds a hospital information station 
+                for a year so that people affected by breast cancer have easy 
+                access to the latest resources and help.
+            </li>
+        </ul>
     </section>
     <section>
             <img src="dr_photo1.png" alt="Diane's Run">
